BB-16094: Long words German edition break the page layout - fix entry fallback fields

--- a/src/Oro/Bundle/EmailBundle/Resources/public/css/scss/short-emails-list.scss
+++ b/src/Oro/Bundle/EmailBundle/Resources/public/css/scss/short-emails-list.scss
@@ -20,6 +20,7 @@
             padding-#{$end}: $content-padding-small / 2;
             text-overflow: ellipsis;
             overflow: hidden;
+            white-space: nowrap;
         }
     }
 
